[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xl_tables"
version = "2.0.0"
description = "Read and write excel files using table descriptors."
readme = "README.rst"
requires-python = ">= 3.13"
authors = [
  {name = "Justin Engel", email = "jtengel08@gmail.com"},
]
license = {text = "MIT License"}
keywords = ["excel", "csv", "xls", "xlsx", "database"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    "dynamicmethod>=1.1.0",
    "wrapt>=1.13.3",
    "openpyxl>=3.1.5",
]


[project.optional-dependencies]
# Named groups of optional dependencies
windows = [
    # win32com, pythoncom,
    "pywin32>=227"
]


[project.urls]
Repository = "https://github.com/justengel/xl_tables"

[bdist_wheel]
universal=1